# siapla

./: .gitignore  Cargo.toml  GitVersion.yml  LICENSE  Readme.md  justfile
.github/: CI_SECRETS.md  copilot-instructions.md
.github/workflows/: ci.yml
crates/siapla/: Cargo.toml
crates/siapla-migration/: Cargo.toml
crates/siapla-migration/src/: lib.rs  m20250322_create_tables.rs  m20251014_add_allocation_booking.rs  main.rs
crates/siapla-open-holidays-api/: Cargo.toml  README.md  api-definition.json
crates/siapla-open-holidays-api/.openapi-generator/: FILES
crates/siapla-open-holidays-api/docs/: CountryReference.md  CountryResponse.md  HolidayByDateResponse.md  HolidayResponse.md  HolidayType.md  HolidaysApi.md  LanguageResponse.md  LocalizedText.md  RegionalApi.md  RegionalScope.md  StatisticsApi.md  StatisticsResponse.md  SubdivisionReference.md  SubdivisionResponse.md  TemporalScope.md
crates/siapla-open-holidays-api/src/apis/: configuration.rs  holidays_api.rs  mod.rs  regional_api.rs  statistics_api.rs
crates/siapla-open-holidays-api/src/models/: country_reference.rs  country_response.rs  holiday_by_date_response.rs  holiday_response.rs  holiday_type.rs  language_response.rs  localized_text.rs  mod.rs  problem_details.rs  regional_scope.rs  statistics_response.rs  subdivision_reference.rs  subdivision_response.rs  temporal_scope.rs
crates/siapla/src/: app_state.rs  db_type.rs  lib.rs
crates/siapla/src/entity/: allocated_resource.rs  allocation.rs  availability.rs  dependency.rs  holiday.rs  holiday_entry.rs  issue.rs  mod.rs  prelude.rs  resource.rs  resource_constraint.rs  resource_constraint_entry.rs  task.rs  vacation.rs
crates/siapla/src/gql/: common.rs  context.rs  dataloader.rs  holiday.rs  mod.rs  mutation.rs  query.rs  subscription.rs  task.rs
crates/siapla/src/gql/types/: allocation.rs  availability.rs  holiday.rs  issue.rs  mod.rs  plan.rs  resource.rs  task.rs  vacation.rs
crates/siapla/src/scheduling/: datastructures.rs  db_layer.rs  ga.rs  interval.rs  mod.rs  priorities.rs  weak_hash_set.rs
frontend/: README.md  apollo.config.cjs  codegen.ts  graphql.schema.json  package-lock.json  package.json  quasar.config.ts  quasar.extensions.json
frontend/src/apollo/: index.ts
frontend/src/common/: datetime.ts
frontend/src/components/: DateTimeInput.vue  DateTimeRangeInput.vue  DialogHandler.vue  DialogLayout.vue  EditableResourceList.vue  EditableTaskList.vue  ExampleComponent.vue  GanttChart.vue  MarkdownEditor.vue  PageLink.vue  PlanCalcBanner.vue  PlanGantt.vue  PlanGanttResources.vue  PlanGanttTasks.vue  ResourceCard.vue  ResourceChip.vue  ResourceDialog.vue  ResourceGrid.vue  ResourceSidebar.vue  SidebarComponentSelector.vue  SidebarLayout.vue  TaskCard.vue  TaskChip.vue  TaskDialog.vue  TaskGrid.vue  TaskSidebar.vue  ganttShared.ts
frontend/src/gql/: gql.ts  graphql.ts  schema.graphql
frontend/src/layouts/: MainLayout.vue
frontend/src/model/: tasks.ts
frontend/src/pages/: PlanPage.vue  PlanResourcesPage.vue  PlanTasksPage.vue  ResourcesPage.vue  TasksPage.vue
frontend/src/router/: routes.ts
frontend/src/stores/: dialog.ts  issue.ts  plan.ts  resource.ts  sidebar.ts  task.ts  task_dialog.ts
image/: Dockerfile
