[package]
name = "siapla"
edition.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true

[[bin]]
name = "siapla-serve"
path = "src/bin/siapla_serve.rs"

[[bin]]
name = "siapla-export-schema"
path = "src/bin/siapla_export_schema.rs"

[dependencies]
anyhow = "1.0.97"
axum = { version = "0.8.1", features = ["macros", "ws"] }
futures = "0.3.31"
juniper = { version = "0.16.1", features = ["anyhow", "chrono", "schema-language"] }
juniper_axum = { version = "0.2.0", features = ["subscriptions"] }
juniper_graphql_ws = { version = "0.4.0", features = ["graphql-transport-ws"] }
sea-orm = { version = "1.1.7", features = ["runtime-tokio-rustls", "sqlx-postgres", "sqlx-sqlite", "macros"] }
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.44.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
