[package]
name = "siapla"
edition.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true

[[bin]]
name = "siapla-serve"
path = "src/bin/siapla_serve.rs"

[[bin]]
name = "siapla-export-schema"
path = "src/bin/siapla_export_schema.rs"

[dependencies]
anyhow = "1.0.97"
anymap = "0.12.1"
axum = { version = "0.8.1", features = ["macros", "ws"] }
chrono = "0.4.40"
dataloader = { version = "0.18.0", default-features = false, features = ["runtime-tokio"] }
futures = "0.3.31"
itertools = "0.14.0"
juniper = { version = "0.17.0", features = ["anyhow", "chrono", "schema-language"] }
juniper_axum = { version = "0.3.0", features = ["subscriptions"] }
juniper_graphql_ws = { version = "0.5.0", features = ["graphql-transport-ws"] }
reqwest = { version = "0.12.15", features = ["json"] }
sea-orm = { version = "1.1.7", features = ["runtime-tokio-rustls", "sqlx-postgres", "sqlx-sqlite", "macros"] }
serde = { version = "1.0.219", features = ["derive"] }
strum = { version = "0.27.1", features = ["derive"] }
thiserror = "2.0.12"
tokio = { version = "1.44.1", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["cors"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
siapla-open-holidays-api = { version = "0.1.0", path = "../siapla-open-holidays-api" }
serde_json = "1.0.140"
petgraph = "0.8.2"
rand = "0.9.2"
chrono-tz = "0.10.4"
tokio-stream = { version = "0.1.11", features = ["sync"] }
include_dir = "0.7"
mime_guess = "2.0"
clap = { version = "4.4", features = ["derive"] }
sqlx = { version = "0.8.3", features = ["sqlite"] }
siapla-migration = { version = "0.1.0", path = "../siapla-migration" }

[dependencies.sea-orm-migration]
version = "1.1.0"
features = [
  # Enable at least one `ASYNC_RUNTIME` and `DATABASE_DRIVER` feature if you want to run migration via CLI.
  # View the list of supported features at https://www.sea-ql.org/SeaORM/docs/install-and-config/database-and-async-runtime.
  "runtime-tokio-rustls",  
  "sqlx-postgres",         
  "sqlx-sqlite",         
]
